Drag issues fixed

--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "angular-growl-v2": "0.7.9",
     "ng-file-upload": "11.0.0",
     "ngImgCropFullExtended": "0.5.4",
-    "ngDraggable": "0.1.10"
+    "ngDraggable": "0.1.10",
+    "socket.io-client": "^1.5.0"
   },
   "resolutions": {
     "angular": "~1.5.0",
